--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="/css/styles.css">
     <link rel="icon" type="image/png" sizes="32x32" href="/images/favicon-32x32.png">
     <title>Group 9 Assignment Two</title>
 </head>
@@ -24,9 +24,10 @@
                     <p>Great</p>
                 </div>
                 <div class="comment">
-                    <p>You scored more than 65% of</p>
-                    <p>the people who has taken</p>
-                    <p>these tests</p>
+                    <p><span>You scored higher than 65% of
+                    <span>the people who has taken</span>
+                    <span>these tests</span>
+                </p>
                 </div>
             </div>
             <div class="right">
@@ -34,19 +35,23 @@
                     <p>Summary</p>
                 </div>
                 <div class="reaction button">
-                    <p class="span"><img src="/images/icon-reaction.svg" alt="reaction-icon"> Reaction<span><strong>80</strong>/100</span></p>
+                    <p class="span"><span class="img"><img src="/images/icon-reaction.svg" alt="reaction-icon"></span>Reaction</p>
+                    <p><span>80</span> / 100</p>
                 </div>
                 <div class="memory button">
-                    <p class="span"><img src="/images/icon-memory.svg" alt="memory-icon"> Memory<span><strong>92</strong>/100</span></p>
+                    <p class="span"><span class="img"><img src="/images/icon-memory.svg" alt="memory-icon"></span>Memory</p>
+                    <p><span>92</span> / 100</p>
                 </div>
                 <div class="verbal button">
-                    <p class="span"><img src="/images/icon-verbal.svg" alt="verbal-icon">Verbal<span><strong>61</strong>/100</span></p>
+                    <p class="span"><span class="img"><img src="/images/icon-verbal.svg" alt="verbal-icon"></span>Verbal</p>
+                    <p><span>61</span> / 100</p>
                 </div>
                 <div class="visual button">
-                    <p class="span"><img src="/images/icon-visual.svg" alt="visual-icon">Visual<span><strong>72</strong>/100</span></p>
+                    <p class="span"><span class="img"><img src="/images/icon-visual.svg" alt="visual-icon"></span>Visual</p>
+                    <p><span>72</span> / 100</p>
                 </div>
                 <div class="continue button">
-                    <p>Continue</p>
+                    Continue
                 </div>
             </div>
         </div>
